...
                carbonMonoxideSection
                nitrogenDioxideSection
                sulfurDioxideSection
            }
            .listStyle(.automatic)
            .accessibilityIdentifier("explanation.list")
            .navigationTitle(Text("label.text.air-quality-guide", comment: "Air Quality Guide"))
            #if os(iOS) || os(visionOS)
            .navigationBarTitleDisplayMode(.inline)
            #endif
            .toolbar {
                ToolbarItem(placement: .cancellationAction) {
                    Button(role: .close) {
...
                        #if os(iOS)
                        Image(systemName: "xmark")
                        #else
                        Text("button.title.close", comment: "Close")
                        #endif
                    }
                    .accessibilityIdentifier("explanation.close.button")
                }
            }
        }
    }

    // MARK: - Sections
...
